Feat:添加在添加服务器页面下载服务器核心的功能

--- a/src/styles/components/views/create/SourceIntakeField.css
+++ b/src/styles/components/views/create/SourceIntakeField.css
@@ -47,6 +47,10 @@
   flex-shrink: 0;
 }
 
+.source-intake-icon-svg {
+  stroke-width: 2;
+}
+
 .source-intake-main {
   display: flex;
   flex-direction: column;
