--- a/src/styles/initial.css
+++ b/src/styles/initial.css
@@ -2,7 +2,7 @@ html {
   background-color: #f8fafc;
 }
 html[data-theme="dark"] {
-  background-color: #0f1117;
+  background-color: #131418;
 }
 body {
   margin: 0;
